--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,31 @@
 <ion-app>
-  <ion-split-pane contentId="main-content">
     <ion-menu contentId="main-content" type="overlay">
       <ion-content>
-        <ion-list id="inbox-list">
-          <ion-list-header>Inbox</ion-list-header>
-          <ion-note>hi@ionicframework.com</ion-note>
+        <ion-list id="menuName">
+          <ion-list-header id="headerMenu">BiblioApp</ion-list-header>
 
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
-            <ion-item (click)="selectedIndex = i" routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" [class.selected]="selectedIndex == i">
-              <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
-              <ion-label>{{ p.title }}</ion-label>
+          <ion-menu-toggle auto-hide="false">
+            <ion-item class="iteMenu"  routerLink="/add-bibliografy" >
+              <ion-icon slot="start" ios="book-outline" md="book-outline"></ion-icon>
+              <ion-label>Agregar bibliografia</ion-label>
             </ion-item>
           </ion-menu-toggle>
+          
+          <ion-menu-toggle auto-hide="false">
+            <ion-item routerLink="inicio">
+              <ion-icon slot="start" ios="documents-outline" md="documents-outline"></ion-icon>
+              <ion-label>Listar bibliografias</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+          
         </ion-list>
-
-        <ion-list id="labels-list">
-          <ion-list-header>Labels</ion-list-header>
-
-          <ion-item *ngFor="let label of labels" lines="none">
-            <ion-icon slot="start" ios="bookmark-outline" md="bookmark-sharp"></ion-icon>
-            <ion-label>{{ label }}</ion-label>
+        <ion-list id="sesion-list">
+          <ion-item (click)="logOut()" lines="none">
+            <ion-icon slot="start" ios="exit-outline" md="exit-outline"></ion-icon>
+            <ion-label>Cerrar Sesion</ion-label>
           </ion-item>
         </ion-list>
       </ion-content>
     </ion-menu>
-    <ion-router-outlet id="main-content"></ion-router-outlet>
-  </ion-split-pane>
+    <ion-router-outlet id="main-content"></ion-router-outlet>    
 </ion-app>
